# 1145-backend

./: .gitignore  ARCHITECTURE.md  PROMPT.md  README.md  SUMMARY.md  cdk.json  jest.config.js  package-lock.json  package.json  tsconfig.json
.kiro/steering/: aws-workflows-data.md  bedrock-agentcore.md  multi-tenant-platform.md  product.md  tech-and-structure.md
agent/: agent-stack.ts  pyproject.toml
agent/src/agentcore/: __init__.py
agent/src/agentcore/contracts/: __init__.py
agent/src/agentcore/gateway/: __init__.py  tool_gateway.py
agent/src/agentcore/leads/: __init__.py  lead_extractor.py
agent/src/agentcore/memory/: __init__.py  memory.py
agent/src/agentcore/publish/: __init__.py  turn_publisher.py
agent/src/agentcore/reasoning/: __init__.py  reasoner.py
agent/src/agentcore/session/: __init__.py  runtime.py  se1_server.py  se1_validator.py
agent/tests/: test_contract_version.py  test_lead_extractor.py  test_memory.py  test_reasoner.py  test_runtime.py  test_scaffolding.py  test_se1_validator.py  test_tool_gateway.py  test_turn_publisher.py
control-plane/: control-plane-stack.ts
control-plane/appsync/: live-state-api.test.ts  live-state-api.ts  publish-resolvers.test.ts  publish-resolvers.ts
control-plane/auth/: errors.ts  index.ts  tenant-derivation.test.ts  tenant-derivation.ts  validated-session.ts
data/: data-stack.test.ts  data-stack.ts
data/crypto/: tenant_key.test.ts  (+1 more)
lib/: backend-app.ts
ml/: ml-stack.ts
scripts/: check-contract-fixtures.mjs
shared/: wiring.ts
test/: backend-app.test.ts
workflows/: workflow-stack.ts
(+108 files in other folders)
