[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "alchemist-agentcore"
version = "0.1.0"
description = "AgentCore (AC-1..4) for 1145 AI — forked from awslabs/amazon-bedrock-agentcore-samples"
requires-python = ">=3.11"
# Boundary shapes (SE-1 wire, AC-2 tools, domain) are imported from the published
# contract, never authored here. Pinned to the versioned seam.
dependencies = [
    "alchemist-contracts==0.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "hypothesis>=6.100",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
